# halo2curves

./: .gitignore  Cargo.toml
benches/: less_than.rs
src/: arithmetic.rs  lib.rs
src/bls12_381/: curve.rs  endo.rs  engine.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mod.rs  pairings.rs  scalar.rs
src/bn256/: curve.rs  fq.rs  fq2.rs  fr.rs
src/derive/: curve.rs  curve_bls12_381.rs  field.rs  field_bls12_381.rs  mod.rs
src/pasta/: mod.rs
src/secp256k1/: curve.rs  fp.rs  fq.rs
src/secp256r1/: fp.rs  fq.rs
src/tests/: curve.rs
