[package]
name = "halo2curves"
version = "0.3.1"
authors = [
  "Sean Bowe <ewillbefull@gmail.com>",
  "Jack Grigg <jack@z.cash>",
  "Alex Vlasov <alex.m.vlasov@gmail.com>",
  "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/kilic/pairing"
readme = "README.md"
description = "Elliptic curve implementations and wrappers for halo2 library"

[[bench]]
name = "less_than"
harness = false

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3", features = ["print-trace"] }
pretty_assertions = "1.3.0"

[dependencies]
subtle = "2.4"
ff = "0.12"
group = "0.12"
pasta_curves = "0.4.1"
static_assertions = "1.1.0"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
lazy_static = { version = "1.4.0"}
num-bigint = "0.4.3"
num-traits = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex = "0.4"

[features]
default = []
asm = []
prefetch = []
print-trace = [ "ark-std/print-trace" ]

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
